# jot-server

./: .env  Cargo.toml  README.md
migrations/: 20241211125909_initial.sql  20241213163053_device_auth.sql  20241217170657_add_tags.sql  20241227140933_add_target_date.sql
src/: jwt.rs  main.rs  middleware.rs
src/db/: auth.rs  mod.rs  notes.rs  repository.rs  user.rs
src/errors/: dto.rs  mod.rs
src/model/: auth.rs  mod.rs  note.rs  repository.rs  user.rs
src/router/: auth.rs  health.rs  mod.rs  note.rs  openapi.rs  repository.rs
src/test/: auth.rs  health.rs  mod.rs  note.rs  repository.rs
src/test/fixtures/: device_auth.sql  note.sql  repository.sql  user.sql
src/util/: mod.rs
static/: device_auth.html  device_auth_error.html  device_auth_success.html
